# trailbase

./: .dockerignore  .gitignore  .gitmodules  .lintstagedrc.mjs  .npmrc  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ci  FORK_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml
client/python/: .flake8  .gitignore  Makefile  README.md  pyproject.toml
client/python/tests/: test_client.py
client/python/trailbase/: __init__.py
client/rust/: Cargo.toml
client/rust/src/: lib.rs
client/rust/tests/: integration_test.rs
client/trailbase-py/: .gitignore  README.md  pyproject.toml
client/trailbase-py/tests/: test_client.py
client/trailbase-py/trailbase/: __init__.py
client/trailbase-rs/: Cargo.toml
client/trailbase-rs/src/: http.rs  lib.rs
client/trailbase-rs/tests/: integration_test.rs
crates/auth-ui/: Cargo.toml  Makefile  README.md  askama.toml  build.rs
crates/auth-ui/dash/: .prettierignore  index.html  package.json  tsconfig.json  vite.config.mts
crates/auth-ui/src/: auth.rs  lib.rs
crates/auth-ui/ui/: astro.config.mjs  eslint.config.mjs  package.json  tsconfig.json
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  import.rs  lib.rs  wasm.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs  record_api.rs  transport.rs
crates/client/tests/: integration_test.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  sql_value.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: benchmark.rs
crates/core/bindings/: ListWasmModulesResponse.ts
crates/core/proto/: config.proto  config_api.proto  metadata.proto
crates/core/src/: app_state.rs  backup.rs  config.rs  connection.rs  constants.rs  data_dir.rs  email.rs  encryption.rs  init_error.rs  lib.rs  listing.rs  logging.rs  metadata.rs  migrations.rs  scheduler.rs  schema_metadata.rs  test.rs  test_utils.rs  transaction.rs  transaction_recorder.rs  util.rs
crates/core/templates/: create_or_replace_record_query.sql  create_record_access_query.sql  create_record_access_query_pg.sql  create_record_query.sql  list_record_query.sql  list_record_query_pg.sql  read_record_query.sql  read_record_query_expanded.sql  subscription_record_read.sql  update_record_access_query.sql  update_record_access_query_pg.sql  update_record_query.sql
crates/core/tests/: admin_permissions_test.rs  integration_test.rs  public_dir_spa_test.rs  public_dir_test.rs  tls_test.rs
crates/extension/: Cargo.toml
crates/extension-so/: Cargo.toml  README.md
crates/extension-so/src/: lib.rs
crates/extension/src/: b64.rs  base64.rs  geoip.rs  jsonschema.rs  lib.rs  password.rs  regex.rs  uuid.rs  validators.rs
crates/js-runtime/: Cargo.toml
crates/js-runtime/src/: import_provider.rs  lib.rs  runtime.rs
crates/pg-schema/: Cargo.toml
crates/qs/: Cargo.toml
crates/schema/: Cargo.toml
crates/sqlite/: Cargo.toml
crates/wasi-keyvalue/: Cargo.toml
mcp/: Dockerfile  README.md  pyproject.toml
mcp/tests/: test_client.py
trailbase-apalis/: Cargo.toml
trailbase-apalis/migrations/: V1__initial.sql
trailbase-apalis/src/: context.rs  from_row.rs  lib.rs  sqlite.rs
trailbase-assets/: Cargo.toml  askama.toml  build.rs
trailbase-assets/src/: assets.rs  auth.rs  lib.rs  version.rs
trailbase-build/: Cargo.toml
trailbase-build/src/: lib.rs  version.rs
trailbase-cli/: Cargo.toml  build.rs
trailbase-cli/src/: args.rs  lib.rs
trailbase-core/: Cargo.toml  askama.toml  build.rs  pnpm-lock.yaml  pnpm-workspace.yaml
trailbase-core/benches/: benchmark.rs
trailbase-core/bindings/: AlterTableRequest.ts  ChangeEmailRequest.ts  Column.ts  ColumnOption.ts  ColumnOrder.ts  ConfiguredOAuthProvidersResponse.ts  CreateIndexResponse.ts  CreateTableResponse.ts  CreateUserRequest.ts  DeleteUserRequest.ts  DropIndexRequest.ts  InfoResponse.ts  Job.ts  JsonSchema.ts  ListJsonSchemasResponse.ts  ListRowsResponse.ts  ListSchemasResponse.ts  ListTasksResponse.ts  ListUsersResponse.ts  LogJson.ts  LoginRequest.ts  LoginResponse.ts  LogoutRequest.ts  Mode.ts  OAuthProviderEntry.ts  ParseResponse.ts  QueryResponse.ts  ReadFilesRequest.ts  RunJobRequest.ts  RunJobResponse.ts  RunTaskRequest.ts  RunTaskResponse.ts  Stats.ts  Table.ts  TableIndex.ts  Task.ts  UniqueConstraint.ts  UpdateRowRequest.ts
trailbase-core/js/: package.json
trailbase-core/proto/: config.proto
trailbase-core/src/: app_state.rs  assets.rs  config.rs  connection.rs  constants.rs  data_dir.rs  email.rs  lib.rs  listing.rs  logging.rs  migrations.rs  queue.rs  scheduler.rs  schema.rs  schema_metadata.rs  table_metadata.rs  transaction.rs  util.rs  value_notifier.rs
trailbase-core/templates/: create_record_access_query.sql  create_record_query.sql  create_record_query2.sql  list_record_query.sql  read_record_query.sql  read_record_query_expanded.sql  subscription_record_read.sql  update_record_access_query.sql  update_record_query.sql
trailbase-core/tests/: admin_permissions_test.rs  integration_test.rs  tls_test.rs
trailbase-core/ui/: trailbase-ts
trailbase-extension/: Cargo.toml
trailbase-extension/src/: geoip.rs  jsonschema.rs  lib.rs  maxminddb.rs  password.rs  regex.rs  uuid.rs  validators.rs
trailbase-js/: Cargo.toml  build.rs
trailbase-js/src/: runtime.rs  util.rs
trailbase-qs/: Cargo.toml
trailbase-qs/src/: column_rel_value.rs  filter.rs  lib.rs  query.rs  util.rs  value.rs
trailbase-refinery/: Cargo.toml
trailbase-refinery/src/: error.rs  lib.rs  runner.rs  util.rs
trailbase-schema/: Cargo.toml
trailbase-schema/bindings/: GeneratedExpressionMode.ts  UniqueConstraint.ts
trailbase-schema/src/: json.rs  json_schema.rs  lib.rs  metadata.rs  parse.rs  registry.rs  sqlite.rs
trailbase-sqlite/: Cargo.toml
trailbase-sqlite/benches/: benchmark.rs  connection.rs  error.rs
trailbase-sqlite/examples/: uuid.rs
trailbase-sqlite/src/: connection.rs  error.rs  extension.rs  geoip.rs  lib.rs  params.rs  rows.rs  schema.rs  tests.rs
(+1570 files in other folders)
