[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trailbase-mcp"
version = "0.2.0"
description = "FastMCP sidecar server for TrailBase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.4.4",
  "httpx>=0.28.1",
  "protobuf>=5.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trailbase_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
