[package]
name = "trailbase-apalis"
version = "0.1.0"
edition = "2021"
publish = false

license = "OSL-3.0"
description = "SQLite SQL storage for Apalis' background job processing"

[features]
default = []

[dependencies]
apalis-core = { version = "0.7.0", default-features = false, features = [
    "sleep",
    "json",
] }
async-std = { version = "1.13.0", optional = true }
async-stream = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
futures-lite = "2.3.0"
log = "0.4.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_rusqlite = "0.38.0"
thiserror = "2.0.0"
tokio = { workspace = true }
trailbase-refinery-core = { workspace = true }
trailbase-refinery-macros = { workspace = true }
trailbase-sqlite = { workspace = true }

[dev-dependencies]
apalis = { version = "0.7.0" }
apalis-core = { version = "0.7.0", default-features = false, features = [ "test-utils" ] }
once_cell = "1.19.0"
tokio = { workspace = true }
trailbase-apalis = { path = "." }

[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
