[package]
name = "trailbase-cli"
version = "0.2.0"
edition = "2021"
license = "OSL-3.0"
publish = false

[[bin]]
name = "trail"

[features]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
axum = { version = "^0.8.1", features=["multipart"] }
chrono = "^0.4.38"
clap = { version = "^4.4.11", features=["derive", "env"] }
env_logger = "^0.11.3"
trailbase = { workspace = true }
trailbase-sqlite = { path = "../trailbase-sqlite" }
log = "^0.4.21"
mimalloc = { version = "^0.1.41", default-features = false }
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.117"
tokio = { version = "^1.38.0", features=["macros", "rt-multi-thread", "fs", "signal"] }
utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"], optional = true }
uuid = { workspace = true }
