[package]
name = "trailbase"
version = "0.1.0"
edition = "2021"
license = "OSL-3.0"
description = "Package to use TrailBase as a framework"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../README.md"
exclude = [
  "benches/",
  "tests/",
  "**/node_modules/",
  "**/dist/",
]
autobenches = false

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["v8"]
v8 = ["dep:rustyscript", ]

[dependencies]
arc-swap = "1.7.1"
argon2 = { version = "^0.5.3", default-features = false, features = ["alloc", "password-hash"] }
askama = { workspace = true }
async-channel = "2.3.1"
async-trait = "0.1.80"
axum = { workspace = true }
axum-client-ip = "0.7.0"
axum-extra = { version = "^0.10.0", default-features = false, features = ["protobuf"] }
base64 = { version = "0.22.1", default-features = false }
bytes = { version = "1.8.0", features = ["serde"] }
chrono = "^0.4.38"
cron = "0.15.0"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem", "rand_core"] }
fallible-iterator = "0.3.0"
form_urlencoded = "1.2.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = "1.6.0"
hyper-util = "0.1.7"
indoc = "2.0.5"
itertools = "0.14.0"
jsonschema = { version = "0.29.0", default-features = false }
jsonwebtoken = { version = "^9.3.0", default-features = false, features = ["use_pem"] }
lazy_static = "1.4.0"
lettre = { version = "^0.11.7", default-features = false, features = ["tokio1-rustls-tls", "sendmail-transport", "smtp-transport", "builder"] }
log = { version = "^0.4.21", default-features = false }
minijinja = { version = "2.1.2", default-features = false }
oauth2 = { version = "5.0.0-alpha.4", default-features = false, features = ["reqwest", "rustls-tls"] }
object_store = { version = "0.12.0", default-features = false, features = ["aws", "fs"] }
parking_lot = { version = "0.12.3", default-features = false }
pin-project-lite = "0.2.16"
prost = { version = "^0.13.4", default-features = false }
prost-reflect = { version = "^0.15.0", default-features = false, features = ["derive", "text-format"] }
rand = "^0.9.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { workspace = true }
rustc_tools_util = "^0.4.2"
rustyscript = { version = "^0.11.0", optional = true, features = ["web", "fs"] }
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.117"
serde_path_to_error = "0.1.16"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
sqlformat = "0.3.1"
sqlite3-parser = "0.14.0"
thiserror = "2.0.1"
tokio = { workspace = true }
tokio-rustls = { version = "0.26.1", default-features = false }
tower = "0.5.0"
tower-cookies = "0.11.0"
tower-http = { version = "^0.6.0", default-features = false, features = ["cors", "trace", "fs", "limit"] }
tower-service = { version = "0.3.3", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["smallvec", "std", "fmt", "ansi"] }
trailbase-assets = { workspace = true }
trailbase-extension = { workspace = true }
trailbase-refinery-core = { workspace = true }
trailbase-refinery-macros = { workspace = true }
trailbase-schema = { workspace = true }
trailbase-sqlite = { workspace = true }
ts-rs = { version = "10", features = ["uuid-impl", "serde-json-impl"] }
url = "^2.4.1"
utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"] }
uuid = { workspace = true }
validator = { version = "0.20.0", default-features = false }

[build-dependencies]
prost-build = "0.13.1"
prost-reflect-build = "0.15.0"
rustc_tools_util = "^0.4.2"

[dev-dependencies]
anyhow = "^1.0.86"
axum-test = "17.0.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
env_logger = { workspace = true }
trailbase-extension = { workspace = true }
quoted_printable = "0.5.1"
schemars = "0.8.21"
temp-dir = "0.1.13"
tower = { version = "0.5.0", features = ["util"] }
rcgen = "0.13.2"
