[package]
name = "trailbase-extension"
version = "0.1.1"
edition = "2021"
license = "OSL-3.0"
description = "SQLite extension used by TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../README.md"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
argon2 = { version = "^0.5.3", default-features = false, features = ["alloc", "password-hash"] }
base64 = { version = "0.22.1", default-features = false }
jsonschema = { version = "0.29.0", default-features = false }
lru = { version = "0.13.0", default-features = false }
maxminddb = "0.24.0"
parking_lot = { version = "0.12.3", default-features = false }
rand = "^0.8.0"
regex = "1.11.0"
rusqlite = { workspace = true }
serde_json = "1.0.121"
uuid = { version = "1.7.0", default-features = false, features = ["std", "v7"] }
validator = { version = "0.20.0", default-features = false }
