[package]
name = "trailbase-refinery"
version = "0.1.0"
authors = ["TrailBase <contact@trailabse.io>"]
description = "Fork of Refinery's refinery-core/macro crates"
license = "OSL-3.0"
repository = "https://github.com/trailbaseio/trailbase"
edition = "2024"
readme = "../README.md"

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
futures = { version = "0.3.16", optional = true, features = ["async-await"] }
log = "0.4"
regex = "1"
rusqlite = { workspace = true }
siphasher = "1.0"
thiserror = "1"
time = { version = "0.3.5", features = ["parsing", "formatting"] }
tokio = { workspace = true }
url = "2.0"
walkdir = "2.3.1"

[dev-dependencies]
tempfile = "3.1.0"
