[package]
name = "trailbase-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
infer = "0.19.0"
jsonschema = { version = "0.29.0", default-features = false }
lazy_static = "1.5.0"
parking_lot = { version = "0.12.3", default-features = false }
schemars = "0.8.21"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "2.0.1"
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
trailbase-extension = { workspace = true }
uuid = { workspace = true }
