[package]
name = "trailbase-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
fallible-iterator = "0.3.0"
indexmap = "2.6.0"
infer = "0.19.0"
itertools = "0.14.0"
jsonschema = { version = "0.29.0", default-features = false }
lazy_static = "1.5.0"
log = { version = "^0.4.21", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
regex = "1.11.1"
schemars = "0.8.21"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "1.0.122"
sqlite3-parser = "0.14.0"
thiserror = "2.0.1"
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
trailbase-extension = { workspace = true }
ts-rs = { version = "10", features = ["uuid-impl", "serde-json-impl"] }
uuid = { workspace = true }

[dev-dependencies]
anyhow = "1.0.97"
indoc = "2.0.6"
rusqlite = { workspace = true }
