[package]
name = "trailbase-sqlite"
version = "0.2.0"
edition = "2021"
license = "OSL-3.0"
description = "SQLite facilities used by TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../README.md"

[dependencies]
crossbeam-channel = "0.5.13"
infer = "0.19.0"
jsonschema = { version = "0.29.0", default-features = false }
lazy_static = "1.5.0"
log = "0.4.22"
rusqlite = { workspace = true }
schemars = "0.8.21"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "1.0.122"
serde_rusqlite = "0.38.0"
trailbase-sqlean = { workspace = true }
sqlite-vec = "0.1.6"
thiserror = "2.0.1"
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
trailbase-extension = { workspace = true }
uuid = { workspace = true }
parking_lot = { version = "0.12.3", default-features = false }
