[package]
name = "trailbase-sqlite"
version = "0.2.0"
edition = "2021"
license = "OSL-3.0"
description = "Async SQLite connection for TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../README.md"
autobenches = false

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[dependencies]
crossbeam-channel = "0.5.13"
log = { version = "^0.4.21", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
rusqlite = { workspace = true }
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "1.0.122"
serde_rusqlite = "0.38.0"
thiserror = "2.0.1"
tokio = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
env_logger = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4.27"
rand = "0.9.0"
tempfile = "3.19.1"
trailbase-extension = { workspace = true }
uuid = { workspace = true }
