[tool.poetry]
name = "trailbase"
version = "0.4.0"
description = "TrailBase client for Python"
authors = ["TrailBase <contact@trailbase.io>"]
repository = "https://github.com/trailbaseio/trailbase"
homepage = "https://trailbase.io"
license = "Apache-2.0 OR OSL-3.0"
readme = "README.md"
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.27.2"
pyjwt = "^2.10.0"
cryptography = "^43.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pyright = "^1.1.389"
pytest = "^8.3.3"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# NOTE: flake8 linter has to be configured in .flake8
[tool.black]
line-length = 108

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
verboseOutput = true
