[package]
name = "trailbase-client"
version = "0.5.0"
edition = "2024"
license = "OSL-3.0"
description = "Client for accessing TrailBase's record APIs"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../../README.md"
exclude = [
  "tests",
]

[dependencies]
bytes = "1.10.1"
eventsource-stream = "0.2.3"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
jsonwebtoken = { version = "9.3.0", default-features = false }
parking_lot = "0.12.3"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.12"
tower = { version = "0.5.2", default-features = false, features = ["buffer"] }
tower-http = { version = "0.6.4", features = ["util", "map-request-body", "map-response-body"] }
tower-http-client = "0.5.2"
tower-reqwest = "0.5.2"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-service = "0.3.3"
